DONE: Bookings list, Check for urgent bookings. Add filter to books list for free books TODO: Friends Maybe?

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DumoGo">
         <activity
+            android:name=".BookingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".BookProfile"
             android:exported="false" />
         <activity
